# tidepool

./: .dockerignore  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  Dockerfile.ingest  Dockerfile.query  Makefile  README.md  TEMPLATE.md  docker-compose.yml  go.mod  go.sum  phases.md  railway.toml  test_api.sh
.github/workflows/: clear-bucket.yml  release.yml
crates/tidepool-common/: Cargo.toml
crates/tidepool-common/benches/: hnsw.rs  ivf.rs  simd.rs
crates/tidepool-common/src/: attributes.rs  bloom.rs  config.rs  document.rs  lib.rs  manifest.rs  quantization.rs  redis.rs  segment.rs  segment_v2.rs  simd.rs  storage.rs  text.rs  tombstone.rs  vector.rs  wal.rs
crates/tidepool-common/src/index/: hnsw.rs  ivf.rs  mod.rs  recall.rs  text.rs
crates/tidepool-common/tests/: hnsw_test.rs  quantization_test.rs  segment_test.rs
docs/: GO_CLIENT.md  NAMESPACE_CLIENT_UPDATE_PROMPT.md  PYTHON_CLIENT.md  TYPESCRIPT_CLIENT.md
ingest/: Cargo.toml  Dockerfile  railway.toml
ingest/cmd/ingest/: main.go  main_test.go
ingest/internal/compaction/: compactor.go  compactor_test.go
ingest/src/: compactor.rs  main.rs  namespace_manager.rs  wal_buffer.rs
internal/compaction/: compactor.go  compactor_test.go
internal/config/: config.go
internal/document/: document.go
internal/manifest/: manifest.go  manifest_test.go
internal/search/: engine.go  engine_test.go
internal/segment/: index.go  segment.go  segment_test.go
internal/storage/: memory.go  s3.go
internal/vector/: distance.go  distance_test.go
internal/wal/: wal.go  wal_test.go
perf/: Cargo.toml
perf/src/: main.rs
query/: Cargo.toml  Dockerfile  railway.toml
query/cmd/query/: main.go  main_test.go
query/src/: bootstrap.rs  buffer.rs  engine.rs  eviction.rs  invalidation.rs  lib.rs  loader.rs  main.rs  namespace_manager.rs  redis_sync.rs  sync.rs
query/tests/: engine_test.rs  namespace_manager_test.rs
scripts/: bench.sh  scale-bench.sh
services/ingest/: railway.toml
services/query/: railway.toml
