[package]
name = "tidepool-query"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "limit"] }
thiserror = "1"
roaring = "0.10"

# Local crate
tidepool-common = { path = "../crates/tidepool-common" }
