[package]
name = "tidepool-query"
version = "0.1.0"
edition = "2021"

[dependencies]
arc-swap = "1"
axum = "0.7"
futures-util = "0.3"
parking_lot = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
hex = "0.4"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "limit"] }
thiserror = "1"
roaring = "0.10"

# Local crate
tidepool-common = { path = "../crates/tidepool-common" }
