[package]
name = "tidepool-common"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
aws-config = "1"
aws-sdk-s3 = "1"
aws-types = "1"
bytes = "1"
chrono = { version = "0.4", features = ["serde"] }
humantime = "2"
hex = "0.4"
ordered-float = "4"
rand = "0.8"
roaring = "0.10"
rkyv = { version = "0.7", features = ["validation"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "1"
tokio = { version = "1", features = ["sync", "rt-multi-thread", "macros"] }
byteorder = "1"
memmap2 = "0.9"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "hnsw"
harness = false
